# portal-cli

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitkeep  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO.md
include/portal-cli/: argument-handler.h  manager.h  player.h
src/: argument-handler.cpp  main.cpp  manager.cpp  player.cpp
